--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "ai-help-center",
   "version": "1.0.0",
-  "description": "Production-grade AI Help Center application using Gemini with RAG and citations.",
-  "type": "module",
+  "private": true,
+  "description": "AI Help Center built with Next.js, Tailwind CSS, and Gemini RAG pipelines.",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc -p tsconfig.json",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "vitest run"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
-    "supertest": "^6.3.4",
-    "tsx": "^4.7.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vitest": "^1.5.0"
   }
