--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/[[...path]].mjs": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "installCommand": "npm install",
   "buildCommand": "npm run build",
-  "framework": null
+  "framework": "nextjs"
 }
