--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "vitest run"
+    "test": "vitest run",
+    "build:sdk": "tsup --config tsup.config.ts && node scripts/prepare-sdk-package.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tsup": "^8.5.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.0"
   }
