--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "test": "vitest run",
-    "build:sdk": "tsup --config tsup.config.ts && node scripts/prepare-sdk-package.mjs",
+    "build:sdk": "tsup --config tsup.config.js && node scripts/prepare-sdk-package.mjs",
     "release:sdk": "npm run build:sdk && npm publish dist"
   },
   "dependencies": {
@@ -20,14 +20,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "tsup": "^8.5.0",
-    "typescript": "^5.4.5",
     "vitest": "^1.5.0"
   }
 }
