--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "release:sdk": "npm run build:sdk && npm publish lib/sdk"
   },
   "dependencies": {
+    "@octokit/app": "^16.1.0",
+    "@octokit/plugin-paginate-rest": "^13.1.1",
+    "@octokit/rest": "^22.0.0",
+    "@octokit/webhooks": "^14.1.3",
     "@supabase/supabase-js": "^2.46.1",
     "dotenv": "^16.4.5",
     "next": "^14.2.5",
     "next-auth": "^4.24.11",
+    "p-limit": "^7.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tar": "^7.5.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
